# transcribe-cli_Public

./: Cargo.toml  LICENSE  README.md  REST_API.md
assets/: onnx_asr_fbanks.npz
src/: audio.rs  dynamic_chunk.rs  gigaam.rs  main.rs  model.rs  model_download.rs  onnx_ctc.rs  onnx_transducer.rs  parakeet.rs  rest.rs  server.rs  stream.rs  transcribe.rs  video.rs
